--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-    location.href = 'https://service-36wivxsc-1256127833.ap-hongkong.apigateway.myqcloud.com/release/scf_onedrive_filelistor'
+    location.href = 'https://service-9sxcqh1e-1259608536.hk.apigw.tencentcs.com/release/one'
 </script>
