--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script>
-    location.href = 'https://service-9sxcqh1e-1259608536.hk.apigw.tencentcs.com/release/one'
+    location.href = 'https://service-rrrl051m-1259608536.hk.apigw.tencentcs.com/release/one2'
 </script>
